<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/reset"
        android:id="@+id/reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="1"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:title="@string/blackAndWhite"
        android:id="@+id/blackAndWhite"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:title="@string/colorize"
        android:id="@+id/colorize"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="300"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:title="@string/share"
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="400"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
